methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: illegal start of simple expression
  var listPos:Array[(Int,Int)]=Array((3,6),)
                                           ^FlowerPot:6: error: ')' expected but '}' found.
}
^